; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_as-iosched.c_as_trim.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_as-iosched.c_as_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_context = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.io_context*)* @as_trim to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @as_trim(%struct.io_context* %0) #0 {
  %2 = alloca %struct.io_context*, align 8
  store %struct.io_context* %0, %struct.io_context** %2, align 8
  %3 = load %struct.io_context*, %struct.io_context** %2, align 8
  %4 = getelementptr inbounds %struct.io_context, %struct.io_context* %3, i32 0, i32 0
  %5 = call i32 @spin_lock_irq(i32* %4)
  %6 = load %struct.io_context*, %struct.io_context** %2, align 8
  %7 = getelementptr inbounds %struct.io_context, %struct.io_context* %6, i32 0, i32 1
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.io_context*, %struct.io_context** %2, align 8
  %12 = getelementptr inbounds %struct.io_context, %struct.io_context* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @free_as_io_context(i32* %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.io_context*, %struct.io_context** %2, align 8
  %17 = getelementptr inbounds %struct.io_context, %struct.io_context* %16, i32 0, i32 1
  store i32* null, i32** %17, align 8
  %18 = load %struct.io_context*, %struct.io_context** %2, align 8
  %19 = getelementptr inbounds %struct.io_context, %struct.io_context* %18, i32 0, i32 0
  %20 = call i32 @spin_unlock_irq(i32* %19)
  ret void
}

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @free_as_io_context(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
